# rustic_core

./: Cargo.toml
crates/backend/: Cargo.toml
crates/backend/src/: choose.rs  filter.rs  lib.rs  retry.rs  util.rs
crates/backend/src/local/: backend.rs  config.rs  destination.rs  local_be.rs  local_dest.rs  local_src.rs  mapper.rs  mod.rs  source.rs
crates/backend/src/opendal/: backend.rs  config.rs  destination.rs  log.rs  mod.rs  opendal_be.rs  opendal_dest.rs  opendal_src.rs  scheme.rs  source.rs  tests.rs  throttle.rs  vfs.rs
crates/backend/src/rclone/: backend.rs  config.rs  mod.rs  rclone_be.rs
crates/backend/src/rest/: backend.rs  config.rs  mod.rs  rest_be.rs
crates/backend/src/stdin/: mod.rs  source.rs
crates/backend/src/stdout/: mod.rs  source.rs
crates/core/: Cargo.toml
crates/core/src/: archiver.rs  backend.rs  lib.rs  progress.rs  repository.rs
crates/core/src/archiver/: file_archiver.rs
crates/core/src/backend/: choose.rs  dest.rs  filters.rs  token.rs
crates/core/src/blob/tree/: excludes.rs
crates/core/src/commands/: backup.rs  check.rs  restore.rs
crates/core/src/repofile/: keyfile.rs  snapshotfile.rs
crates/core/src/repofile/snapshotfile/: modification.rs
crates/core/src/repository/: command_input.rs  credentials.rs
crates/core/tests/: command_input.rs  integration.rs
crates/core/tests/integration/: append_only.rs  backup.rs  chunker.rs  copy.rs  dump.rs  find.rs  hotcold.rs  ls.rs  prune.rs  restore.rs  rewrite.rs  snapshots.rs  vfs.rs
examples/backup/examples/: backup.rs
examples/check/examples/: check.rs
examples/config/examples/: config.rs
examples/copy/examples/: copy.rs
examples/find/examples/: find.rs
examples/forget/examples/: forget.rs
examples/init/examples/: init.rs
examples/key/examples/: key.rs
examples/ls/examples/: ls.rs
examples/merge/examples/: merge.rs
examples/prune/examples/: prune.rs
examples/restore/examples/: restore.rs
examples/tag/examples/: tag.rs
