[package]
name = "rustic_backend"
version = "0.7.0"
authors = ["the rustic-rs team"]
categories = ["data-structures", "filesystem"]
documentation = "https://docs.rs/rustic_backend"
edition = "2024"
homepage = "https://rustic.cli.rs/"
include = ["src/**/*", "LICENSE-*", "README.md"]
keywords = ["backup", "restic", "deduplication", "encryption", "library"]
license = "Apache-2.0 OR MIT"
publish = true
readme = "README.md"
repository = "https://github.com/rustic-rs/rustic_core/tree/main/crates/backend"
resolver = "3"
rust-version = { workspace = true }
description = """
rustic_backend - library for supporting various backends in rustic-rs
"""

[lib]
path = "src/lib.rs"
name = "rustic_backend"
test = true
doctest = true
bench = true
doc = true
harness = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["opendal", "rest", "rclone"]
cli = ["merge", "clap"]
merge = ["dep:conflate"]
clap = ["dep:clap"]
opendal = [
    "dep:opendal-ext",
    "dep:rayon",
    "dep:tokio",
    "tokio/rt-multi-thread",
    "dep:typed-path",
]
rest = ["dep:reqwest", "dep:backon"]
rclone = ["rest", "dep:rand", "dep:semver"]

[dependencies]
# core
rustic_core = { workspace = true }

# errors
displaydoc = { workspace = true }
thiserror = { workspace = true }
paste = "1.0"
heck = "0.5.0"
serde-value = "0.7"

# logging
log = { workspace = true }

# other dependencies
bytes = { workspace = true }
derive_setters = "0.1.9"
jiff = "0.2.19"
strum = { version = "0.28.0", features = ["derive"] }
ignore = "0.4.25"
serde_with = { version = "3.16.1", features = ["base64"] }
serde_json = "1"

# general / backend choosing
hex = { version = "0.4.3", features = ["serde"] }
serde = { version = "1.0.228" }
url = "2.5.8"

# cli support
clap = { version = "4.5.57", optional = true, features = ["derive", "env", "wrap_help"] }
conflate = { version = "0.3.3", optional = true }

# local backend
aho-corasick = { workspace = true }
walkdir = "2.5.0"

# rest backend
backon = { version = "1.6.0", optional = true }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls", "stream", "blocking"], optional = true }

# rclone backend
rand = { version = "0.10.0", optional = true }
semver = { version = "1.0.27", optional = true }

# opendal backend
bytesize = "2.3.1"
rayon = { version = "1.11.0", optional = true }
tokio = { version = "1.49.0", optional = true, default-features = false }
typed-path = { version = "0.12.2", optional = true }
filetime = "0.2.29"
nix = "0.31.3"
cached = "1.1.0"
dashmap = "6"

[target.'cfg(not(any(windows, target_os="openbsd")))'.dependencies]
# for local source/destination
xattr = "1"

[target.'cfg(not(windows))'.dependencies]
# opendal backend
# - sftp is not supported on windows, see https://github.com/apache/incubator-opendal/issues/2963
opendal-ext = {
    git = "https://www.github.com/ericg2/opendal-ext.git",
    version = "0.57.0",
    features = [
        "blocking",
        "services-b2",
        "services-ftp",
        "services-sftp",
        "services-swift",
        "services-azblob",
        "services-azdls",
        "services-cos",
        "services-fs",
        "services-dropbox",
        "services-gdrive",
        "services-gcs",
        "services-ghac",
        "services-http",
        "services-ipmfs",
        "services-memory",
        "services-obs",
        "services-onedrive",
        "services-oss",
        "services-pcloud",
        "services-s3",
        "services-webdav",
        "services-webhdfs",
        "services-azfile",
        "services-yandex-disk",
    ],
    optional = true
}

[target.'cfg(windows)'.dependencies]
# opendal backend
opendal-ext = {
    git = "https://www.github.com/ericg2/opendal-ext.git",
    version = "0.57.0",
    features = [
        "blocking",
        "services-b2",
        "services-ftp",
        "services-swift",
        "services-azblob",
        "services-azdls",
        "services-cos",
        "services-fs",
        "services-dropbox",
        "services-gdrive",
        "services-gcs",
        "services-ghac",
        "services-http",
        "services-ipmfs",
        "services-memory",
        "services-obs",
        "services-onedrive",
        "services-oss",
        "services-pcloud",
        "services-s3",
        "services-webdav",
        "services-webhdfs",
        "services-azfile",
        "services-yandex-disk"
    ],
    optional = true
}

[dev-dependencies]
anyhow = { workspace = true }
rstest = { workspace = true }
flate2 = "1"
globset = "0.4"
insta = { version = "1.48", features = ["redactions", "ron"] }
mockall = "0.15"
pretty_assertions = "1.4"
proptest = { version = "1.10", default-features = false, features = ["std"] }
# We need to have rustic_backend here, because the doc-tests in lib.rs of rustic_core
rustic_backend = { workspace = true }
rustic_testing = { workspace = true }
tar = "0.4"
tempfile = { workspace = true }
toml = "1"

[lints]
workspace = true
